feat + refactor: create StudentService, add deleteById, fix some bugs